--- a/client/src/app/views/evidence/evidence-revise/evidence-revise.view.html
+++ b/client/src/app/views/evidence/evidence-revise/evidence-revise.view.html
@@ -1,25 +1,24 @@
 <ng-container *ngIf="evidence$ | async as evidence">
-  <cvc-section-navigation
-    [displayName]="evidence.name"
+  <cvc-section-navigation [displayName]="evidence.name"
     [relationsTpl]="evidenceRelations"> </cvc-section-navigation>
   <ng-template #evidenceRelations>
     <nz-space nzDirection="horizontal">
 
       <!-- parent relations -->
-      <nz-space-item>
-        <span nz-typography
-          class="label"><strong>{{ evidence.name }}</strong> Parents:</span>
-      </nz-space-item>
-      <nz-space-item class="tags">
+      <span nz-typography
+        class="label"
+        *nzSpaceItem><strong>{{ evidence.name }}</strong> Parents:</span>
+      <span *nzSpaceItem
+        class="tags">
         <a routerLink="/genes/{{ evidence.gene.id }}">
           <cvc-gene-tag [gene]="evidence.gene"></cvc-gene-tag>
         </a>
         <a routerLink="/variants/{{ evidence.variant.id }}">
           <cvc-variant-tag [variant]="evidence.variant"></cvc-variant-tag>
         </a>
-      </nz-space-item>
-
+      </span>
     </nz-space>
+
   </ng-template>
   <nz-page-header class="site-page-header">
 
