--- a/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
@@ -1,16 +1,13 @@
-<ng-container *ngIf="phenotype$ | ngrxPush as phenotype" >
+<ng-container *ngIf="phenotype$ | ngrxPush as phenotype">
   <cvc-section-navigation [displayName]="phenotype.name"> </cvc-section-navigation>
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
-      <nz-space nzDirection="horizontal">
-        <nz-space-item>
-          <i nz-icon nzType="civic:phenotype"></i>
-        </nz-space-item>
-        {{ phenotype.name }}
-      </nz-space>
+      <i nz-icon
+        nzType="civic:phenotype"></i> {{ phenotype.name }}
     </nz-page-header-title>
     <nz-page-header-extra>
-      <cvc-link-tag [href]="phenotype.url" tooltip="View in the HPO">
+      <cvc-link-tag [href]="phenotype.url"
+        tooltip="View in the HPO">
         {{ phenotype.hpoId }}
       </cvc-link-tag>
     </nz-page-header-extra>
