--- a/client/src/app/views/evidence/evidence-detail/evidence-detail.view.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-detail.view.html
@@ -7,7 +7,7 @@
 
       <!-- parent relations -->
       <span nz-typography class="label" *nzSpaceItem><strong>{{ evidence.name }}</strong> Parents:</span>
-      <span class="tags">
+      <span class="tags" *nzSpaceItem>
         <a routerLink="/genes/{{ evidence.gene.id }}">
           <cvc-gene-tag [gene]="evidence.gene"></cvc-gene-tag>
         </a>
