better styles on releases & stats placeholder pages

--- a/client/src/app/views/releases/releases-main/releases-main.component.html
+++ b/client/src/app/views/releases/releases-main/releases-main.component.html
@@ -1,16 +1,19 @@
 <nz-page-header class="site-page-header">
+
+  <!--title-->
   <nz-page-header-title>
     <i nz-icon nzType="download"></i>
     Data Releases
   </nz-page-header-title>
 
+  <!--content-->
   <nz-page-header-content>
-    <div nz-row>
-      <div nz-col [nzSpan]="24">
+    <nz-row>
+      <nz-col [nzSpan]="24">
         <div class="content">
-          <p>Data releases browse table goes here.</p>
+          Data Releases table goes here.
         </div>
-      </div>
-    </div>
+      </nz-col>
+    </nz-row>
   </nz-page-header-content>
 </nz-page-header>
