better styles for remaining placeholder pages

--- a/client/src/app/views/pages/pages-about/pages-about.component.html
+++ b/client/src/app/views/pages/pages-about/pages-about.component.html
@@ -1,3 +1,18 @@
-<h2>About CiVIC</h2>
+<nz-page-header class="site-page-header">
 
-<p>We can move over the existing about page here, and extend it to a tabbed interface to include acknowledgements, funding, pages.</p>
+  <!--title-->
+  <nz-page-header-title>
+    About CIViC
+  </nz-page-header-title>
+
+  <!--content-->
+  <nz-page-header-content>
+    <nz-row>
+      <nz-col [nzSpan]="24">
+        <div class="content" style="min-height: 600px">
+          <p>Existing About page will be here, a tabbed UI will additionally include acknowledgements, funding, citing, etc. pages.</p>
+        </div>
+      </nz-col>
+    </nz-row>
+  </nz-page-header-content>
+</nz-page-header>
