--- a/client/src/app/views/pages/pages-contact/pages-contact.component.html
+++ b/client/src/app/views/pages/pages-contact/pages-contact.component.html
@@ -1,3 +1,18 @@
-<h2>Contact CIViC</h2>
+<nz-page-header class="site-page-header">
 
-<p>Port over the current contact page.</p>
+  <!--title-->
+  <nz-page-header-title>
+    Contact
+  </nz-page-header-title>
+
+  <!--content-->
+  <nz-page-header-content>
+    <nz-row>
+      <nz-col [nzSpan]="24">
+        <div class="content" style="min-height: 600px">
+          <p>Move over exising Content page</p>
+        </div>
+      </nz-col>
+    </nz-row>
+  </nz-page-header-content>
+</nz-page-header>
