--- a/client/src/app/views/pages/pages-help/pages-help.component.html
+++ b/client/src/app/views/pages/pages-help/pages-help.component.html
@@ -1,3 +1,19 @@
-<h2>Get Help Using or Understanding CIViC</h2>
+<nz-page-header class="site-page-header">
 
-<p>Links to readthedocs, civic-help list, other methods of getting assistance, asking questions.</p>
+  <!--title-->
+  <nz-page-header-title>
+    Help
+  </nz-page-header-title>
+
+  <!--content-->
+  <nz-page-header-content>
+    <nz-row>
+      <nz-col [nzSpan]="24">
+        <div class="content"
+          style="min-height: 600px">
+          <p>Links to readthedocs, civic-help list, other methods of getting assistance, asking questions.</p>
+        </div>
+      </nz-col>
+    </nz-row>
+  </nz-page-header-content>
+</nz-page-header>
