implemented welcome page onInit to fetch stats

--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -157,4 +157,9 @@
         class="home-card"></nz-card>
     </nz-col>
   </nz-row>
+  <nz-row *nzSpaceItem>
+    <nz-col>
+      <ngx-json-viewer [json]="stats$ | ngrxPush"></ngx-json-viewer>
+    </nz-col>
+  </nz-row>
 </nz-space>
